# quarry

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  TESTING.md  hatch_build.py  pyproject.toml  server.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  pr-title.yml  release.yml  semantic-release.yml
examples/workspace/: connections.toml
examples/workspace/queries/shop/: recent_orders.sql
scripts/: coverage.sh  gui-screenshots.sh  gui_screenshots.py  test.sh
site/: index.html  zh.html
src/quarry/: __init__.py  cache.py  cli.py  core.py  gui.py  local.py  local_sync.py  mcp.py  proxy.py  proxycommand.py  redis_engine.py  tunnel.py  workspace.py
src/quarry/web_dist/: index.html
src/quarry/web_dist/assets/: index--StWkkFr.js  index--q8cg0YG.js  index-0bOOEQh3.js  index-B3RkLL75.css  index-B8nnrkjT.css  index-BHhaPYkW.js  index-BQXDGVf0.js  index-BUH9fMCn.js  index-BW1ZgydJ.js  index-BkFlwkUV.css  index-BpG-l80h.css  index-BwzsYoe5.js  index-C-_P64mI.js  index-C0JuzleZ.js  index-C2eGJ-mj.js  index-C77qGZP4.js  index-C9An9KnN.css  index-CGutX_7D.css  index-CNe4vYnC.js  index-CWbr6oBA.css  index-CYuGuAWI.css  index-C_CPnN9_.js  index-Ca2muV5j.css  index-CeeBnpJJ.css  index-CkHUxOAH.js  index-CsuUCk-z.js  index-CtOd0mzL.css  index-Cvnrc6zH.css  index-DEMQf433.js  index-DEwfziT9.js  index-DGFHgBPp.js  index-DHRmEcqg.js  index-DHiRW7da.css  index-DI-8iCeY.css  index-DJG4A9Df.css  index-DN-YWdeC.js  index-DNxab6aD.css  index-DOaxzvfu.js  index-DQ_o0rTN.css  index-DVXgwUZo.js  (+15 more)
tests/: conftest.py  seed.sql  test_cache.py  test_cli.py  test_cli_e2e.py  test_cli_helpers.py  test_cli_integration.py  test_core.py  test_core_more.py  test_cov_cli.py  test_cov_core.py  test_cov_gui.py  test_groups.py  test_gui_api.py  test_gui_backend.py  test_gui_browser.py  test_gui_browser_features.py  test_gui_react_app.py  test_gui_visual.py  test_local.py  test_local_docker.py  test_local_sync.py  test_local_sync_docker.py  test_mcp.py  test_mcp_e2e.py  test_mcp_integration.py  test_packaging.py  test_proxy.py  test_proxycommand.py  test_query_timeout.py  test_redis_engine.py  test_redis_safety.py  test_safety_rails.py  test_v2.py  test_workspace_tunnel.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  ConnInfoModal.tsx  Header.tsx  Modals.tsx  ResultWorkbench.tsx  SchemaBrowser.tsx  Sidebar.tsx  SqlEditor.tsx  TabBar.tsx  UpdatePanel.tsx  WhatsNewPanel.tsx  WorkspaceModal.tsx  api.ts  clip.ts  i18n.ts  main.tsx  modalStack.ts  queryLink.test.ts  queryLink.ts  test-setup.ts  useEvents.ts  useSqlHistory.ts
web/src/store/: connStore.ts  tabsStore.test.ts  tabsStore.ts  toastStore.ts  types.ts  uiStore.ts
