[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quarry-db"
version = "0.2.1"
description = "AI-native database workbench: one safety-railed query kernel, many faces (CLI / GUI / agent skill / MCP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wangggym" }]
keywords = ["database", "sql", "postgres", "mysql", "redis", "ai", "agent", "mcp", "cli", "workbench"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Wangggym/quarry"
Repository = "https://github.com/Wangggym/quarry"
Changelog = "https://github.com/Wangggym/quarry/blob/main/CHANGELOG.md"
Issues = "https://github.com/Wangggym/quarry/issues"

[project.optional-dependencies]
mysql = ["pymysql>=1.1"]
gui = ["flask>=3.0"]
dev = ["pymysql>=1.1", "flask>=3.0", "pytest>=8.0"]

[project.scripts]
qy = "quarry.cli:main"
quarry = "quarry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quarry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
