[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quarry-db"
version = "0.2.2"
description = "AI-native database workbench: one safety-railed query kernel, many faces (CLI / GUI / agent skill / MCP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wangggym" }]
keywords = ["database", "sql", "postgres", "mysql", "redis", "ai", "agent", "mcp", "cli", "workbench"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Wangggym/quarry"
Repository = "https://github.com/Wangggym/quarry"
Changelog = "https://github.com/Wangggym/quarry/blob/main/CHANGELOG.md"
Issues = "https://github.com/Wangggym/quarry/issues"

[project.optional-dependencies]
mysql = ["pymysql>=1.1"]
gui = ["flask>=3.0"]
dev = ["pymysql>=1.1", "flask>=3.0", "pytest>=8.0", "pytest-cov>=5.0"]
# Browser-driven GUI e2e (headless Chromium). After install, run:
#   python -m playwright install chromium
e2e = ["pytest>=8.0", "playwright>=1.40"]

[project.scripts]
qy = "quarry.cli:main"
quarry = "quarry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quarry"]
# Editable installs map each top-level package to its exact source path instead
# of just appending a directory to sys.path. If that path later disappears (e.g.
# a git worktree used for `pip install -e .` gets removed), imports fail with a
# FileNotFoundError naming the missing path — not a bare, unhelpful
# ModuleNotFoundError. See CONTRIBUTING.md "Reinstalling after a worktree is
# removed".
dev-mode-exact = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/web/node_modules",
  "/web/tsconfig.tsbuildinfo",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra: one-line reason for every skip/xfail at the end (see what the env gated).
# --strict-markers: a typo'd marker is an error, not a silent no-op.
addopts = "-ra --strict-markers --tb=short --durations=10"
markers = [
    "unit: pure logic; no DB, network, or subprocess",
    "integration: in-process against a real database engine",
    "e2e: drives a real qy CLI / GUI server / MCP subprocess",
    "browser: drives the real GUI frontend in a headless browser (Playwright)",
]

[tool.coverage.run]
source = ["quarry"]
branch = true
# subprocess-launched code (qy CLI / MCP) is covered in-process by the
# integration suites, so we don't need coverage's multiprocess plumbing.

[tool.coverage.report]
# The 95% gate applies to unit + integration (see `make cov`). Frontend JS lives
# in the INDEX_HTML string literal and is exercised by the browser suite, not by
# line coverage. Defensive/unreachable lines are excluded explicitly.
precision = 1
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def main\\(",
    "if TYPE_CHECKING:",
    "# unreachable",          # dead line after err(..., exit_code=) which always raises
    "\\.\\.\\.",
]
omit = ["*/quarry/__main__.py"]
